Displaying warnings if food is entered incorrectly

--- a/app/src/main/res/layout/activity_new_food.xml
+++ b/app/src/main/res/layout/activity_new_food.xml
@@ -64,7 +64,7 @@
             android:id="@+id/calories_unit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_gravity="left"
             android:text="@string/calories_unit" />
 
         <TextView
@@ -88,7 +88,7 @@
             android:id="@+id/carbs_unit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_gravity="left"
             android:text="@string/carbs_unit" />
 
         <Button
