--- a/app/src/main/res/layout/activity_new_food.xml
+++ b/app/src/main/res/layout/activity_new_food.xml
@@ -12,8 +12,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="100">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/foodname_label"
@@ -24,7 +23,7 @@
 
         <TextView
             android:id="@+id/favorite_label"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="10"
             android:text="@string/favorite_label" />
@@ -33,8 +32,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="100">
+        android:layout_height="wrap_content">
 
         <EditText
             android:id="@+id/foodname"
@@ -49,7 +47,7 @@
 
         <Switch
             android:id="@+id/favorite"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="10"
             android:layout_marginEnd="16dp" />
@@ -64,8 +62,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="100">
+        android:layout_height="wrap_content">
 
         <EditText
             android:id="@+id/calories"
@@ -80,7 +77,7 @@
 
         <TextView
             android:id="@+id/calories_unit"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="10"
             android:text="@string/calories_unit"
@@ -96,8 +93,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="100">
+        android:layout_height="wrap_content">
 
         <EditText
             android:id="@+id/carbs"
@@ -112,7 +108,7 @@
 
         <TextView
             android:id="@+id/carbs_unit"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="10"
             android:text="@string/carbs_unit" />
