--- a/app/src/main/res/layout/activity_new_food.xml
+++ b/app/src/main/res/layout/activity_new_food.xml
@@ -1,136 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/new_food"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:paddingStart="@dimen/activity_horizontal_padding"
     android:paddingEnd="@dimen/activity_horizontal_padding"
     android:paddingTop="@dimen/activity_vertical_padding"
     android:paddingBottom="@dimen/activity_vertical_padding"
     android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/foodname_label"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="90"
-            android:text="@string/foodname_label" />
-
-        <TextView
-            android:id="@+id/favorite_label"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="10"
-            android:text="@string/favorite_label" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/foodname"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="90"
-            android:fontFamily="sans-serif-light"
-            android:importantForAutofill="no"
-            android:inputType="textAutoComplete"
-            android:padding="@dimen/small_padding"
-            android:textSize="18sp" />
-
-        <Switch
-            android:id="@+id/favorite"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="10"
-            android:layout_marginEnd="16dp" />
-
-    </LinearLayout>
+    
+    <android.support.constraint.Guideline
+        android:id="@+id/unit_separator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.85" />
+    
+    <TextView
+        android:id="@+id/foodname_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="@string/foodname_label"
+        app:layout_constraintEnd_toStartOf="@+id/unit_separator"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/calories_label"
-        android:layout_width="match_parent"
+        android:id="@+id/favorite_label"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/calories_label" />
+        android:layout_marginStart="8dp"
+        android:text="@string/favorite_label"
+        app:layout_constraintStart_toEndOf="@+id/unit_separator"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <EditText
+        android:id="@+id/foodname"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="sans-serif-light"
+        android:importantForAutofill="no"
+        android:inputType="textAutoComplete"
+        android:padding="@dimen/small_padding"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/unit_separator"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/foodname_label" />
 
-        <EditText
-            android:id="@+id/calories"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="90"
-            android:fontFamily="sans-serif-light"
-            android:importantForAutofill="no"
-            android:inputType="numberDecimal"
-            android:padding="@dimen/small_padding"
-            android:textSize="18sp" />
+    <Switch
+        android:id="@+id/favorite"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toEndOf="@+id/unit_separator"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/favorite_label" />
+    
+    <TextView
+        android:id="@+id/calories_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/calories_label"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/foodname" />
 
-        <TextView
-            android:id="@+id/calories_unit"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="10"
-            android:text="@string/calories_unit"
-            app:layout_constraintBaseline_toBaselineOf="@+id/calories_label" />
+    <EditText
+        android:id="@+id/calories"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="sans-serif-light"
+        android:importantForAutofill="no"
+        android:inputType="numberDecimal"
+        android:padding="@dimen/small_padding"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/unit_separator"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calories_label" />
 
-    </LinearLayout>
+    <TextView
+        android:id="@+id/calories_unit"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="@string/calories_unit"
+        app:layout_constraintBaseline_toBaselineOf="@+id/calories"
+        app:layout_constraintStart_toEndOf="@+id/unit_separator"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/carbs_label"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/carbs_label" />
+        android:text="@string/carbs_label"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calories" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <EditText
+        android:id="@+id/carbs"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="sans-serif-light"
+        android:importantForAutofill="no"
+        android:inputType="numberDecimal"
+        android:padding="@dimen/small_padding"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/unit_separator"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/carbs_label" />
 
-        <EditText
-            android:id="@+id/carbs"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="90"
-            android:fontFamily="sans-serif-light"
-            android:importantForAutofill="no"
-            android:inputType="numberDecimal"
-            android:padding="@dimen/small_padding"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/carbs_unit"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="10"
-            android:text="@string/carbs_unit" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/carbs_unit"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="@string/carbs_unit"
+        app:layout_constraintBaseline_toBaselineOf="@+id/carbs"
+        app:layout_constraintStart_toEndOf="@+id/unit_separator"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/button_save"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:background="@color/colorPrimary"
         android:text="@string/button_save"
-        android:textColor="@color/buttonLabel" />
+        android:textColor="@color/buttonLabel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/carbs" />
 
     <Button
         android:id="@+id/button_cancel"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:background="@color/colorPrimary"
         android:text="@string/button_cancel"
-        android:textColor="@color/buttonLabel" />
-
-</LinearLayout>
+        android:textColor="@color/buttonLabel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/botton_save" />
+    
+</android.support.constraint.ConstraintLayout>
