--- a/app/src/main/res/layout-land/activity_new_food.xml
+++ b/app/src/main/res/layout-land/activity_new_food.xml
@@ -7,14 +7,28 @@
     android:paddingEnd="@dimen/activity_horizontal_padding"
     android:paddingTop="@dimen/activity_vertical_padding"
     android:paddingBottom="@dimen/activity_vertical_padding">
-    
+
+    <android.support.constraint.Guideline
+        android:id="@+id/label_separator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.3" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/center_separator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
     <android.support.constraint.Guideline
         android:id="@+id/unit_separator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.8" />
-    
+        app:layout_constraintGuide_percent="0.9" />
+
     <TextView
         android:id="@+id/foodname_label"
         android:layout_width="0dp"
@@ -59,16 +73,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/unit_separator"
         app:layout_constraintTop_toBottomOf="@+id/favorite_label" />
-    
+
     <TextView
         android:id="@+id/calories_label"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/calories_label"
         android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/label_separator"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/foodname" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/calories" />
 
     <EditText
         android:id="@+id/calories"
@@ -82,8 +96,8 @@
         android:padding="@dimen/small_padding"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/unit_separator"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calories_label" />
+        app:layout_constraintStart_toStartOf="@+id/label_separator"
+        app:layout_constraintTop_toBottomOf="@+id/foodname" />
 
     <TextView
         android:id="@+id/calories_unit"
@@ -101,9 +115,9 @@
         android:layout_height="wrap_content"
         android:text="@string/carbs_label"
         android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/label_separator"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calories" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/carbs" />
 
     <EditText
         android:id="@+id/carbs"
@@ -117,8 +131,8 @@
         android:padding="@dimen/small_padding"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/unit_separator"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/carbs_label" />
+        app:layout_constraintStart_toStartOf="@+id/label_separator"
+        app:layout_constraintTop_toBottomOf="@+id/calories" />
 
     <TextView
         android:id="@+id/carbs_unit"
@@ -135,10 +149,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@color/colorPrimary"
         android:text="@string/button_save"
         android:textColor="@color/buttonLabel"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/center_separator"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/carbs" />
 
@@ -147,11 +162,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
         android:background="@color/colorPrimary"
         android:text="@string/button_cancel"
         android:textColor="@color/buttonLabel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_save" />
-    
+        app:layout_constraintStart_toEndOf="@+id/center_separator"
+        app:layout_constraintTop_toBottomOf="@+id/carbs" />
+
+
 </android.support.constraint.ConstraintLayout>
