--- a/app/src/main/res/layout/activity_new_food.xml
+++ b/app/src/main/res/layout/activity_new_food.xml
@@ -9,19 +9,33 @@
     android:paddingBottom="@dimen/activity_vertical_padding">
     
     <android.support.constraint.Guideline
-        android:id="@+id/unit_separator"
+        android:id="@+id/guideline_80"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.8" />
-    
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline_33"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.2" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline_66"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.4" />
+
     <TextView
         android:id="@+id/foodname_label"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="@string/foodname_label"
-        app:layout_constraintEnd_toStartOf="@+id/unit_separator"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_80"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/favorite_label"
-        app:layout_constraintStart_toEndOf="@+id/unit_separator"
+        app:layout_constraintStart_toEndOf="@+id/guideline_80"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,7 +60,7 @@
         android:inputType="textAutoComplete"
         android:padding="@dimen/small_padding"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/unit_separator"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_80"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/foodname_label" />
 
@@ -57,7 +71,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/unit_separator"
+        app:layout_constraintStart_toEndOf="@+id/guideline_80"
         app:layout_constraintTop_toBottomOf="@+id/favorite_label" />
     
     <TextView
@@ -81,7 +95,7 @@
         android:inputType="numberDecimal"
         android:padding="@dimen/small_padding"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/unit_separator"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_80"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calories_label" />
 
@@ -92,7 +106,7 @@
         android:layout_marginStart="8dp"
         android:text="@string/calories_unit"
         app:layout_constraintBaseline_toBaselineOf="@+id/calories"
-        app:layout_constraintStart_toEndOf="@+id/unit_separator"
+        app:layout_constraintStart_toEndOf="@+id/guideline_80"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
@@ -116,7 +130,7 @@
         android:inputType="numberDecimal"
         android:padding="@dimen/small_padding"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/unit_separator"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_80"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/carbs_label" />
 
@@ -127,20 +141,176 @@
         android:layout_marginStart="8dp"
         android:text="@string/carbs_unit"
         app:layout_constraintBaseline_toBaselineOf="@+id/carbs"
-        app:layout_constraintStart_toEndOf="@+id/unit_separator"
+        app:layout_constraintStart_toEndOf="@+id/guideline_80"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Typical amounts -->
+
+    <TextView
+        android:id="@+id/amounttypical_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/amounttypical_label"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/carbs"/>
+
+    <TextView
+        android:id="@+id/amount_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="4dp"
+        android:text="@string/amount_label"
+        app:layout_constraintStart_toEndOf="@+id/guideline_33"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_66"
+        app:layout_constraintTop_toBottomOf="@+id/amounttypical_label"/>
+
+    <TextView
+        android:id="@+id/comment_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="4dp"
+        android:text="@string/comment_label"
+        app:layout_constraintStart_toEndOf="@+id/guideline_66"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/amount_label"/>
+
+    <TextView
+        android:id="@+id/amountsmall_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="4dp"
+        android:text="@string/amountsmall_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_33"
+        app:layout_constraintTop_toBottomOf="@+id/amount_label"/>
+
+    <EditText
+        android:id="@+id/amountsmall"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
+        android:importantForAutofill="no"
+        android:inputType="numberDecimal"
+        android:padding="@dimen/small_padding"
+        android:textSize="18sp"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintStart_toEndOf="@+id/guideline_33"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_66"
+        app:layout_constraintBaseline_toBaselineOf="@+id/amountsmall_label"/>
+
+
+    <EditText
+        android:id="@+id/amountsmall_comment"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
+        android:importantForAutofill="no"
+        android:padding="@dimen/small_padding"
+        android:textSize="18sp"
+        android:maxLength="20"
+        android:layout_marginStart="4dp"
+        app:layout_constraintStart_toEndOf="@+id/guideline_66"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/amountsmall"/>
+
+    <TextView
+        android:id="@+id/amountmedium_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="4dp"
+        android:text="@string/amountmedium_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_33"
+        app:layout_constraintTop_toBottomOf="@+id/amountsmall_label"/>
+
+    <EditText
+        android:id="@+id/amountmedium"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
+        android:importantForAutofill="no"
+        android:inputType="numberDecimal"
+        android:padding="@dimen/small_padding"
+        android:textSize="18sp"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintStart_toEndOf="@+id/guideline_33"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_66"
+        app:layout_constraintBaseline_toBaselineOf="@+id/amountmedium_label"/>
+
+
+    <EditText
+        android:id="@+id/amountmedium_comment"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
+        android:importantForAutofill="no"
+        android:padding="@dimen/small_padding"
+        android:textSize="18sp"
+        android:maxLength="20"
+        android:layout_marginStart="4dp"
+        app:layout_constraintStart_toEndOf="@+id/guideline_66"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/amountmedium"/>
+
+    <TextView
+        android:id="@+id/amountlarge_label"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="4dp"
+        android:text="@string/amountlarge_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_33"
+        app:layout_constraintTop_toBottomOf="@+id/amountmedium_label"/>
+
+    <EditText
+        android:id="@+id/amountlarge"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
+        android:importantForAutofill="no"
+        android:inputType="numberDecimal"
+        android:padding="@dimen/small_padding"
+        android:textSize="18sp"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintStart_toEndOf="@+id/guideline_33"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_66"
+        app:layout_constraintBaseline_toBaselineOf="@+id/amountlarge_label"/>
+
+    <EditText
+        android:id="@+id/amountlarge_comment"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
+        android:importantForAutofill="no"
+        android:padding="@dimen/small_padding"
+        android:textSize="18sp"
+        android:maxLength="20"
+        android:layout_marginStart="4dp"
+        app:layout_constraintStart_toEndOf="@+id/guideline_66"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/amountlarge"/>
+
+    <!-- Buttons -->
 
     <Button
         android:id="@+id/button_save"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:background="@color/colorPrimary"
         android:text="@string/button_save"
         android:textColor="@color/buttonLabel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/carbs" />
+        app:layout_constraintTop_toBottomOf="@+id/amountlarge_label" />
 
     <Button
         android:id="@+id/button_cancel"
