Added small/medium/large meal to database

--- a/app/src/main/res/layout/activity_new_food.xml
+++ b/app/src/main/res/layout/activity_new_food.xml
@@ -55,6 +55,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:maxLines="1"
+        android:lines="1"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="textAutoComplete"
@@ -90,6 +92,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:maxLines="1"
+        android:lines="1"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
@@ -125,6 +129,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:maxLines="1"
+        android:lines="1"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
@@ -151,6 +157,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:maxLines="1"
         android:text="@string/amounttypical_label"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -194,6 +201,8 @@
         android:id="@+id/amountsmall"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:lines="1"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
@@ -209,6 +218,8 @@
         android:id="@+id/amountsmall_comment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:lines="1"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:padding="@dimen/small_padding"
@@ -234,6 +245,8 @@
         android:id="@+id/amountmedium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:lines="1"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
@@ -249,6 +262,8 @@
         android:id="@+id/amountmedium_comment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:lines="1"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:padding="@dimen/small_padding"
@@ -274,6 +289,8 @@
         android:id="@+id/amountlarge"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:lines="1"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
@@ -288,6 +305,8 @@
         android:id="@+id/amountlarge_comment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:lines="1"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:padding="@dimen/small_padding"
