Improvements in NewFoodActivity

--- a/app/src/main/res/layout/activity_new_food.xml
+++ b/app/src/main/res/layout/activity_new_food.xml
@@ -55,8 +55,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:maxLines="1"
-        android:lines="1"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="textAutoComplete"
@@ -92,8 +90,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:maxLines="1"
-        android:lines="1"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
@@ -129,8 +125,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:maxLines="1"
-        android:lines="1"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
@@ -201,11 +195,10 @@
         android:id="@+id/amountsmall"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:lines="1"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
+        android:nextFocusForward="@+id/amountsmall_comment"
         android:padding="@dimen/small_padding"
         android:textSize="18sp"
         android:layout_marginEnd="4dp"
@@ -218,8 +211,8 @@
         android:id="@+id/amountsmall_comment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:lines="1"
+        android:inputType="textAutoComplete"
+        android:nextFocusForward="@+id/amountmedium"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:padding="@dimen/small_padding"
@@ -245,11 +238,10 @@
         android:id="@+id/amountmedium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:lines="1"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
+        android:nextFocusForward="@+id/amountmedium_comment"
         android:padding="@dimen/small_padding"
         android:textSize="18sp"
         android:layout_marginEnd="4dp"
@@ -262,8 +254,8 @@
         android:id="@+id/amountmedium_comment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:lines="1"
+        android:inputType="textAutoComplete"
+        android:nextFocusForward="@+id/amountlarge"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:padding="@dimen/small_padding"
@@ -289,11 +281,10 @@
         android:id="@+id/amountlarge"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:lines="1"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
+        android:nextFocusForward="@+id/amountlarge_comment"
         android:padding="@dimen/small_padding"
         android:textSize="18sp"
         android:layout_marginEnd="4dp"
@@ -305,8 +296,7 @@
         android:id="@+id/amountlarge_comment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:lines="1"
+        android:inputType="textAutoComplete"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:padding="@dimen/small_padding"
