--- a/app/src/main/res/layout/food_calc_item.xml
+++ b/app/src/main/res/layout/food_calc_item.xml
@@ -2,7 +2,6 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:focusable="true"
@@ -13,22 +12,31 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/newmeal_fooditem"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="@dimen/small_padding">
 
         <android.support.constraint.Guideline
-            android:id="@+id/guideline_center"
+            android:id="@+id/guideline1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.5" />
+            app:layout_constraintGuide_percent="0.65" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.9" />
 
         <TextView
             android:id="@+id/newmeal_foodname"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
+            style="@style/food_title"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_center"
+            app:layout_constraintEnd_toStartOf="@+id/guideline1"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
@@ -37,13 +45,24 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
             android:importantForAutofill="no"
-            android:inputType="numberDecimal"
-            android:padding="@dimen/small_padding"
+            android:inputType="number"
+            android:selectAllOnFocus="true"
+            android:imeOptions="actionDone"
+            android:maxLines="1"
             android:textSize="18sp"
             android:layout_marginStart="4dp"
-            app:layout_constraintStart_toEndOf="@+id/guideline_center"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="4dp"
+            app:layout_constraintStart_toEndOf="@+id/guideline1"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintBaseline_toBaselineOf="@+id/newmeal_foodname" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/unit_gram"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/newmeal_amount"
+            app:layout_constraintBaseline_toBaselineOf="@id/newmeal_amount" />
 
         <Spinner
             android:id="@+id/newmeal_typicalamountspinner"
@@ -51,10 +70,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/newmeal_foodname"
-            android:layout_marginTop="8dp">
-
-        </Spinner>
+            app:layout_constraintTop_toBottomOf="@+id/newmeal_foodname" />
 
     </android.support.constraint.ConstraintLayout>
 
