WIP commit - MealCalc

--- a/app/src/main/res/layout/activity_calc_meal.xml
+++ b/app/src/main/res/layout/activity_calc_meal.xml
@@ -8,7 +8,6 @@
     android:paddingTop="@dimen/activity_vertical_padding"
     android:paddingBottom="@dimen/activity_vertical_padding">
 
-
-
+    <include layout="@layout/content_calc_meal" />
 
 </android.support.constraint.ConstraintLayout>
