WIP commit - changed data model

--- a/app/src/main/res/layout/activity_new_food.xml
+++ b/app/src/main/res/layout/activity_new_food.xml
@@ -58,6 +58,7 @@
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="textAutoComplete"
+        android:selectAllOnFocus="true"
         android:padding="@dimen/small_padding"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
@@ -93,6 +94,7 @@
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
+        android:selectAllOnFocus="true"
         android:padding="@dimen/small_padding"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
@@ -128,6 +130,7 @@
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
+        android:selectAllOnFocus="true"
         android:padding="@dimen/small_padding"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
@@ -198,6 +201,7 @@
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="number"
+        android:selectAllOnFocus="true"
         android:nextFocusForward="@+id/amountsmall_comment"
         android:padding="@dimen/small_padding"
         android:textSize="18sp"
@@ -212,6 +216,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="textAutoComplete"
+        android:selectAllOnFocus="true"
         android:nextFocusForward="@+id/amountmedium"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
@@ -241,6 +246,7 @@
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="number"
+        android:selectAllOnFocus="true"
         android:nextFocusForward="@+id/amountmedium_comment"
         android:padding="@dimen/small_padding"
         android:textSize="18sp"
@@ -255,6 +261,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="textAutoComplete"
+        android:selectAllOnFocus="true"
         android:nextFocusForward="@+id/amountlarge"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
@@ -284,6 +291,7 @@
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:inputType="number"
+        android:selectAllOnFocus="true"
         android:nextFocusForward="@+id/amountlarge_comment"
         android:padding="@dimen/small_padding"
         android:textSize="18sp"
@@ -297,6 +305,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="textAutoComplete"
+        android:selectAllOnFocus="true"
         android:fontFamily="sans-serif-light"
         android:importantForAutofill="no"
         android:padding="@dimen/small_padding"
